--- a/projectwotan/static/css/style.css
+++ b/projectwotan/static/css/style.css
@@ -247,9 +247,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5em;
-    width: 5em;
-    flex: 1 0 5em;
+    height: 4.5em;
+    width: 4.5em;
+    flex: 1 0 4.5em;
     text-align: right;
     margin: 0.25em;
     bottom: 0;
@@ -257,27 +257,20 @@ body {
     color: #382b71;
     transition-property: all;
     transition-duration: 180ms; }
-    .break-table__cell:before {
-      content: '';
-      width: 100%;
-      height: 0;
-      background: inherit;
-      position: absolute; }
     .break-table__cell.--hover {
       background: #f2f2f2;
       border: 1px solid transparent; }
       .break-table__cell.--hover-row {
         margin-left: -0.25em;
         margin-right: -0.25em;
-        flex: 1 0 6em;
+        flex: 1 0 5.5em;
         border-right: none !important;
         border-left: none !important; }
         .break-table__cell.--hover-row.--header {
-          left: 0.5em;
-          margin-left: 0;
+          margin-left: 0.25em;
           margin-right: 0.5em; }
       .break-table__cell.--hover-column {
-        height: 6em;
+        height: 5.5em;
         margin-top: -0.25em;
         margin-bottom: -0.25em;
         border-top: none !important;
@@ -286,9 +279,10 @@ body {
           bottom: 0.5em; }
       .break-table__cell.--hover-target {
         border-radius: 0.5em;
-        z-index: 1; }
+        z-index: 1;
+        flex: 1 0 5em; }
       .break-table__cell.--hover .break-table__cell__arc-container {
-        width: 5em;
+        width: 4.5em;
         margin-right: 0; }
     .break-table__cell.--frozen {
       background: #f7feff;
@@ -304,7 +298,7 @@ body {
       .break-table__cell.--header:first-child {
         flex: 1 0 15em; }
     .break-table__cell__arc-container {
-      width: 4em;
+      width: 3.5em;
       margin-right: 0.5em;
       transition-property: margin-right, width;
       transition-duration: 180ms; }
@@ -313,32 +307,23 @@ body {
 
 .card {
   display: flex;
-  height: 3.5355em;
+  height: 4.5em;
   flex-direction: row;
   width: 15em;
   position: relative;
-  align-items: flex-start; }
-  .card__remove {
-    font-size: 1.25em;
-    line-height: 0.5;
-    cursor: pointer;
-    opacity: 0.5;
-    background: #382b71;
-    color: white;
-    z-index: -1;
-    top: 0;
-    position: absolute;
-    transition-property: transform;
-    transition-duration: 360ms; }
-    .card__remove:hover {
-      opacity: 0.75; }
+  align-items: flex-end; }
   .card__image {
-    height: 3.5355em;
-    flex: 0 0 3.5355em;
+    height: 4.5em;
+    flex: 0 0 4.5em;
     overflow: hidden;
     position: relative; }
     .card__image img {
       position: absolute; }
+  .card__arc-container {
+    width: 4.5em;
+    height: 4.5em;
+    bottom: 100%;
+    position: absolute; }
   .card__name {
     font-size: 1.15em; }
   .card__info {
@@ -348,6 +333,25 @@ body {
     background: #e6e6e6;
     transition-property: background;
     transition-duration: 180ms; }
+    .card__info__remove {
+      font-size: 1.25em;
+      line-height: 0.5;
+      cursor: pointer;
+      background: #382b71;
+      color: white;
+      top: 0;
+      opacity: 0;
+      position: absolute;
+      transition-property: opacity;
+      transition-duration: 360ms;
+      padding: 0.3em 0.3em 0.5em 0.5em;
+      border-bottom-left-radius: 100%;
+      right: 0;
+      transform-origin: top right; }
+      .card__info__remove:hover {
+        opacity: 0.75; }
+    .card__info:hover .card__info__remove {
+      opacity: 0.5; }
   .card.ice {
     flex-direction: row-reverse;
     align-self: center; }
@@ -356,17 +360,13 @@ body {
       width: 180%;
       left: 25%;
       top: -80%; }
-    .card.ice .card__remove {
-      padding: 0.3em 0.5em 0.5em 0.3em;
-      border-bottom-right-radius: 100%;
-      left: 0;
-      transform-origin: top left; }
+    .card.ice .card__info {
+      height: 4.5em;
+      position: relative; }
   .card.breaker {
-    position: absolute;
-    bottom: 0;
-    transform-origin: bottom left;
-    transform: rotate(-45deg);
-    left: 100%; }
+    transform-origin: bottom left; }
+    .card.breaker .card__image {
+      border-top-right-radius: 1.31805em; }
     .card.breaker img {
       width: 190%;
       left: -50%;
@@ -374,19 +374,18 @@ body {
     .card.breaker.--old-layout img {
       width: 210%;
       left: -77%;
-      top: -21%;
+      top: -22%;
       transform: rotate(10deg); }
-    .card.breaker .card__remove {
-      padding: 0.3em 0.3em 0.5em 0.5em;
-      border-bottom-left-radius: 100%;
-      right: 0;
-      transform-origin: top right; }
+    .card.breaker .card__info {
+      position: absolute;
+      height: 3.18195em;
+      transform: rotate(-45deg);
+      width: 10em;
+      transform-origin: bottom left;
+      bottom: 100%;
+      left: 70.71%; }
   .--hover .card .card__info {
     background: #f2f2f2; }
-  .--hover .card.ice .card__remove {
-    transform: rotate(90deg); }
-  .--hover .card.breaker .card__remove {
-    transform: rotate(-90deg); }
 
 .card-form {
   padding: 1em;
